# ComfyUI_OmnimatteZero

./: OmnimatteZero.py  OmnimatteZero_node.py  README.md  __init__.py  attention_guidance.py  foreground_composition.py  model_loader_utils.py  object_removal.py  pyproject.toml  requirements.txt  self_attention_map.py
LTX-Video-0.9.7-diffusers/: model_index.json
LTX-Video-0.9.7-diffusers/scheduler/: scheduler_config.json
LTX-Video-0.9.7-diffusers/text_encoder/: config.json
LTX-Video-0.9.7-diffusers/tokenizer/: tokenizer_config.json
LTX-Video-0.9.7-diffusers/transformer/: config.json  diffusion_pytorch_model.safetensors.index.json
LTX-Video-0.9.7-diffusers/upsampler/: config.json
LTX-Video-0.9.7-diffusers/vae/: config.json
example_workflows/: OmnimatteZero.json
wrapper/: positive.pt  transformer_ltx.py
